tests/fail-dep/concurrency/libc_pthread_mutex_move.stderr
error: Undefined Behavior: pthread_mutex_t can't be moved
  --> $DIR/libc_pthread_mutex_move.rs:LL:CC
   |
LL |         libc::pthread_mutex_lock(&mut mutex2 as *mut _);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ pthread_mutex_t can't be moved
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE:
   = note: inside `main` at $DIR/libc_pthread_mutex_move.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

